--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
 				<font color="#fff"><h4>Email: williamlaurent404@gmail.com & Instagram: @w1337icp
 				<font color="red"><h3>Exploit & Fix it</h3>
 				<p># <a href="https://williamlaurent.github.io/antibug/laravel-phpunit.txt">Laravel Framework PHPUNIT RCE</a></p>
+				<p># <a href="https://williamlaurent.github.io/antibug/xss.html">XSS & Solution</a></p>
 		</body>
 </html>
