--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 			<table width="100%" height="100%"><td align="center">
 				<h2>Contact Me:</h2>
 				<font color="#fff"><h4>Email: williamlaurent404@gmail.com & Instagram: @w1337icp
+				<h2>Blog:</h2>
+				<p><a href="https://williamlaurent.github.io/antibug/blog.html">Click Here</a></p>
 				<font color="red"><h3>Exploit & Fix it</h3>
 				<p># <a href="https://williamlaurent.github.io/antibug/laravel-phpunit.txt">Laravel Framework PHPUNIT RCE</a></p>
-				<p># <a href="https://williamlaurent.github.io/antibug/xss.html">XSS & Solution</a></p>
 		</body>
 </html>
