--- a/blog.html
+++ b/blog.html
@@ -1,1 +1,4 @@
+<html>
+<title>Willsec - Blog</title>
 <iframe src="https://wm404.blogspot.com/" style="border: 0; width: 100%; height: 100%">
+ </html>
