--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
 				<p><a href="https://williamlaurent.github.io/antibug/blog.html">Click Here</a></p>
 				<font color="red"><h3>Exploit & Fix it</h3>
 				<p># <a href="https://williamlaurent.github.io/antibug/laravel-phpunit.txt">Laravel Framework PHPUNIT RCE</a></p>
-		</body>
+				<p># <a href="https://williamlaurent.github.io/antibug/vb5x.txt">0day vBulletin 5.x.x RCE</a></p>
+	</body>
 </html>
