--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
 				<font color="red"><h3>Exploit & Fix it</h3>
 				<p># <a href="https://williamlaurent.github.io/antibug/laravel-phpunit.txt">Laravel Framework PHPUNIT RCE</a></p>
 				<p># <a href="https://williamlaurent.github.io/antibug/vb5x.txt">0day vBulletin 5.x.x RCE</a></p>
+				<p># <a href="https://williamlaurent.github.io/antibug/fixbypassadmin.txt">Bypass Administrator Patch Trick</a></p>
 	</body>
 </html>
