--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
 				<p># <a href="https://williamlaurent.github.io/antibug/laravel-phpunit.txt">Laravel Framework PHPUNIT RCE</a></p>
 				<p># <a href="https://williamlaurent.github.io/antibug/vb5x.txt">0day vBulletin 5.x.x RCE</a></p>
 				<p># <a href="https://williamlaurent.github.io/antibug/fixbypassadmin.txt">Bypass Administrator Patch Trick</a></p>
+				<p># <a href="https://williamlaurent.github.io/antibug/modern-jfu">Pixinvent Modern Themes Jquery File Upload</a></p>
 	</body>
 </html>
