--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
 				<p># <a href="https://williamlaurent.github.io/antibug/vb5x.txt">0day vBulletin 5.x.x RCE</a></p>
 				<p># <a href="https://williamlaurent.github.io/antibug/fixbypassadmin.txt">Bypass Administrator Patch Trick</a></p>
 				<p># <a href="https://williamlaurent.github.io/antibug/modern-jfu.txt">Pixinvent Modern Themes Jquery File Upload</a></p>
+				<p># <a href="https://williamlaurent.github.io/antibug/slims-traversal.txt">Slims File Upload & File Traversal</a></p>
 	</body>
 </html>
