--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
 				<p># <a href="https://williamlaurent.github.io/antibug/fixbypassadmin.txt">Bypass Administrator Patch Trick</a></p>
 				<p># <a href="https://williamlaurent.github.io/antibug/modern-jfu.txt">Pixinvent Modern Themes Jquery File Upload</a></p>
 				<p># <a href="https://williamlaurent.github.io/antibug/slims-traversal.txt">Slims File Upload & File Traversal</a></p>
+				<p># <a href="https://williamlaurent.github.io/antibug/parallelus.txt">Parallelus WP Themes SQL Injection</a></p>	
 	</body>
 </html>
