--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
 				<p># <a href="https://williamlaurent.github.io/antibug/modern-jfu.txt">Pixinvent Modern Themes Jquery File Upload</a></p>
 				<p># <a href="https://williamlaurent.github.io/antibug/slims-traversal.txt">Slims File Upload & File Traversal</a></p>
 				<p># <a href="https://williamlaurent.github.io/antibug/parallelus.txt">Parallelus WP Themes SQL Injection</a></p>	
+				<p># <a href="https://williamlaurent.github.io/antibug/bigbag.txt">Bigbag Ecommere XSS</a></p>	
 	</body>
 </html>
